--- a/index.html
+++ b/index.html
@@ -1,224 +1,626 @@
 <!doctype html>
+
 <html lang="pt-BR">
 
 <head>
+
   <meta charset="utf-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>ME - Gestão na Prática</title>
+
   <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada." />
 
+
+
   <style>
+
     :root {
+
       --bg: #F2EFE8;
+
       --card: #F2EFE8;
+
       --secondary: #E5DFD2;
+
       --accent: #C1A167;
+
       --muted: #9E9586;
+
       --text-strong: #8C837F;
+
       --radius: 14px;
+
       --max: 1100px;
+
       --shadow: 0 6px 20px #D6C9B8;
+
     }
+
+
 
     * { box-sizing: border-box; }
 
+
+
     body {
+
       margin: 0;
+
       background: linear-gradient(180deg, var(--bg), var(--secondary));
+
       color: var(--muted);
+
       font-family: Inter, system-ui, Arial;
+
     }
+
+
 
     .wrap {
+
       max-width: var(--max);
+
       margin: 32px auto;
+
       padding: 20px;
+
     }
+
+
 
     header {
+
       display: flex;
-      justify-content: space-between;
+
       align-items: center;
+
+      justify-content: space-between;
+
       gap: 16px;
+
     }
+
+
+
+    .brand {
+
+      display: flex;
+
+      align-items: center;
+
+      gap: 12px;
+
+    }
+
+
+
+    .logo {
+
+      width: 64px;
+
+      height: 64px;
+
+      border-radius: 12px;
+
+      background: var(--accent);
+
+      display: flex;
+
+      align-items: center;
+
+      justify-content: center;
+
+      color: #fff;
+
+      font-weight: 700;
+
+      font-size: 20px;
+
+      box-shadow: var(--shadow);
+
+    }
+
+
 
     nav {
+
       display: flex;
+
       gap: 12px;
+
     }
+
+
 
     nav a {
+
       padding: 10px 14px;
+
       border-radius: 10px;
+
       text-decoration: none;
+
       color: var(--muted);
+
       font-weight: 600;
+
     }
+
+
 
     nav a.primary {
+
       border: 1px solid rgba(0,0,0,0.1);
+
       color: var(--accent);
+
     }
 
-    .card {
-      background: var(--card);
-      padding: 22px;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
+
 
     .hero {
+
+      display: grid;
+
+      grid-template-columns: 1fr 420px;
+
+      gap: 24px;
+
       margin-top: 24px;
+
+      align-items: center;
+
     }
 
-    .hero h2 {
-      font-size: 28px;
-      margin: 8px 0;
+
+
+    .card {
+
+      background: var(--card);
+
+      padding: 22px;
+
+      border-radius: var(--radius);
+
+      box-shadow: var(--shadow);
+
     }
 
-    .cta {
-      margin-top: 12px;
-    }
+
+
+    .hero-left h2 { font-size: 28px; margin: 8px 0; }
+
+
+
+    .cta { display: flex; gap: 12px; margin-top: 12px; }
+
+
 
     .btn {
+
       padding: 12px 18px;
+
       border-radius: 12px;
+
       border: none;
+
       cursor: pointer;
+
       font-weight: 700;
+
     }
+
+
 
     .btn-primary {
+
       background: var(--accent);
+
       color: #fff;
+
     }
+
+
+
+    .profile-photo {
+
+      width: 100%;
+
+      height: 420px;
+
+      border-radius: 12px;
+
+      overflow: hidden;
+
+      display: flex;
+
+      align-items: center;
+
+      justify-content: center;
+
+      background: #eee;
+
+    }
+
+
+
+    .profile-photo img {
+
+      width: 100%;
+
+      height: 100%;
+
+      object-fit: cover;
+
+    }
+
+
 
     .grid-3 {
+
       display: grid;
+
       grid-template-columns: repeat(3,1fr);
+
       gap: 18px;
+
       margin-top: 18px;
+
     }
 
-    /* SOBRE MIM */
-    .sobre-container {
-      display: grid;
-      grid-template-columns: 320px 1fr;
-      gap: 28px;
-      align-items: center;
-    }
 
-    .sobre-foto img {
-      width: 100%;
-      max-height: 420px;
-      object-fit: contain;
-      border-radius: 18px;
-      box-shadow: var(--shadow);
-    }
-
-    .sobre-texto p {
-      margin: 0;
-      line-height: 1.7;
-    }
 
     .gallery img {
+
       width: 100%;
-      height: 140px;
+
+      height: 120px;
+
       object-fit: cover;
+
       border-radius: 10px;
+
     }
+
+
 
     footer {
+
       margin-top: 28px;
+
       text-align: center;
+
+      color: var(--muted);
+
       font-size: 14px;
+
     }
 
-    /* RESPONSIVO */
-    @media (max-width: 900px) {
-      .grid-3 {
-        grid-template-columns: repeat(2,1fr);
-      }
 
-      .sobre-container {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
 
-      .sobre-foto img {
-        max-width: 260px;
-        margin: 0 auto;
-      }
+    @media (max-width: 980px) {
+
+      .hero { grid-template-columns: 1fr; }
+
+      .profile-photo { height: 300px; }
+
+      .grid-3 { grid-template-columns: repeat(2,1fr); }
+
     }
+
+
 
     @media (max-width: 520px) {
-      .grid-3 {
-        grid-template-columns: 1fr;
-      }
+
+      .grid-3 { grid-template-columns: 1fr; }
+
     }
+
+    .sobre-container {
+
+  display: grid;
+
+  grid-template-columns: 220px 1fr;
+
+  gap: 20px;
+
+  align-items: center;
+
+}
+
+
+
+.sobre-foto img {
+
+  width: 100%;
+
+  border-radius: 14px;
+
+  box-shadow: var(--shadow);
+
+  object-fit: cover;
+
+}
+
+
+
+.sobre-texto p {
+
+  margin: 0;
+
+  line-height: 1.6;
+
+}
+
+
+
+/* Responsivo */
+
+@media (max-width: 720px) {
+
+  .sobre-container {
+
+    grid-template-columns: 1fr;
+
+    text-align: center;
+
+  }
+
+
+
+  .sobre-foto img {
+
+    max-width: 220px;
+
+    margin: 0 auto;
+
+  }
+
+
+
   </style>
+
 </head>
 
+
+
 <body>
-<div class="wrap">
 
-<header>
-  <div>
-    <h1>ME - Gestão na Prática</h1>
-    <p>ADM em formação | Consultoria Simples</p>
-  </div>
+  <div class="wrap">
 
-  <nav>
-    <a href="#sobre">Sobre mim</a>
-    <a href="#servicos">Serviços</a>
-    <a href="#blog">Blog</a>
-    <a href="#contato" class="primary">Contato</a>
-  </nav>
-</header>
 
-<section class="hero card">
-  <h2>Passo a passo para organizar seu negócio na prática</h2>
-  <p>Dicas de organização e produtividade para MEIs e pequenos negócios.</p>
-  <div class="cta">
-    <a class="btn btn-primary" href="#contato">Agendar Consulta</a>
-  </div>
 
-  <div class="grid-3">
-    <div class="card"><h3>Gestão Financeira</h3><p>Fluxo de caixa e planejamento.</p></div>
-    <div class="card"><h3>Processos</h3><p>Organização e rotina.</p></div>
-    <div class="card"><h3>Treinamento</h3><p>Capacitação prática.</p></div>
-  </div>
-</section>
+    <header>
 
-<section id="sobre" class="card" style="margin-top:18px">
+      <div class="brand">
+
+        <div>
+
+          <h1>ME - Gestão na Prática</h1>
+
+          <p class="lead">ADM em formação | Consultoria Simples</p>
+
+        </div>
+
+      </div>
+
+
+
+      <nav>
+
+        <a href="#sobre">Sobre mim</a>
+
+        <a href="#servicos">Serviços</a>
+
+        <a href="#blog">Blog</a>
+
+        <a href="#depoimentos">Depoimentos</a>
+
+        <a href="#contato" class="primary">Contato</a>
+
+      </nav>
+
+    </header>
+
+
+
+    <section class="hero">
+
+      <div class="hero-left card">
+
+        <span class="pill">Organização • Clareza • Produtividade</span>
+
+
+
+        <h2>Passo a passo para organizar seu negócio na prática</h2>
+
+
+
+        <p>Dicas de organização e produtividade, orientações práticas para MEIs e pequenos negócios, consultorias acessíveis e humanizadas.</p>
+
+
+
+        <div class="cta">
+
+          <a class="btn btn-primary" href="#contato">Agendar Consulta</a>
+
+        </div>
+
+
+
+        <div class="grid-3">
+
+          <div class="card"><h3>Gestão Financeira</h3><p>Fluxo de caixa e planejamento.</p></div>
+
+          <div class="card"><h3>Processos</h3><p>Organização e rotina.</p></div>
+
+          <div class="card"><h3>Treinamento</h3><p>Capacitação prática.</p></div>
+
+        </div>
+
+      </div>
+
+
+
+    <section id="sobre" class="card" style="margin-top:18px">
+
   <h3>Sobre mim</h3>
 
+
+
   <div class="sobre-container">
+
     <div class="sobre-foto">
-      <img src="maria-eduarda.png" alt="Maria Eduarda - ME Gestão na Prática">
+
+      <img src="Semfund" alt="Maria Eduarda - ME Gestão na Prática">
+
     </div>
+
+
 
     <div class="sobre-texto">
+
       <p>
-        Olá! Eu sou Maria Eduarda, tenho 24 anos e sou estudante do último período de Administração pela UESPI.
+
+        Olá! Eu sou Maria Eduarda, tenho 24 anos, sou teresinense e estudante do último período de Bacharelado em Administração pela Universidade Estadual do Piauí.
+
         <br><br>
-        Acredito na gestão feita de forma leve, acessível e aplicada ao dia a dia.
+
+        Minha jornada na gestão começou muito antes da sala de aula. Sempre fui apaixonada por organização, rotina e pela forma como pequenos ajustes podem transformar completamente a vida das pessoas. Ao longo da graduação, essa paixão ganhou estrutura, método e propósito — e hoje se tornou o meu trabalho.
+
+
+
+Criei este espaço para ajudar pessoas que desejam mais clareza, praticidade e equilíbrio, mas não querem nada complicado, pesado ou distante da realidade. Acredito na gestão feita de forma leve, acessível e aplicada ao dia a dia: aquela que realmente funciona.
+
+
+
+Aqui você vai encontrar orientação prática, ferramentas simples, acompanhamento próximo e um olhar humano, porque cada pessoa tem sua própria história, ritmo e necessidades. Meu objetivo é caminhar com você para que sua rotina trabalhe a seu favor — não contra você.
+
+
+
+Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, você não precisa fazer isso sozinha. Estou aqui para te guiar nessa jornada de forma clara, gentil e eficiente.
+
         <br><br>
+
         <strong>Vamos construir sua melhor versão na prática?</strong>
+
       </p>
+
     </div>
+
   </div>
+
 </section>
 
-<footer>
-  © <span id="ano"></span> — ME - Gestão na Prática
-</footer>
 
-</div>
 
-<script>
-  document.getElementById("ano").textContent = new Date().getFullYear();
-</script>
+    <section id="servicos" class="card" style="margin-top:18px">
+
+      <h3>Serviços</h3>
+
+      <div class="gallery">
+
+        <img src="gallery1.jpg" />
+
+        <img src="gallery2.jpg" />
+
+        <img src="gallery3.jpg" />
+
+      </div>
+
+    </section>
+
+
+
+    <section id="blog" class="card" style="margin-top:18px">
+
+      <h3>Blog</h3>
+
+      <div class="grid-3">
+
+        <div class="card">Post 1</div>
+
+        <div class="card">Post 2</div>
+
+        <div class="card">Post 3</div>
+
+      </div>
+
+    </section>
+
+
+
+    <section id="depoimentos" class="card" style="margin-top:18px">
+
+      <h3>Depoimentos</h3>
+
+    </section>
+
+
+
+    <section id="contato" class="card" style="margin-top:18px">
+
+      <h3>Contato</h3>
+
+      <a href="mailto:me.gestaonapratica@gmail.com">✉️ Email — me.gestaonapratica@gmail.com</a>
+
+
+
+      <form style="margin-top:12px;display:grid;gap:8px">
+
+        <input placeholder="Nome" />
+
+        <input placeholder="Telefone / WhatsApp" />
+
+        <textarea placeholder="Mensagem"></textarea>
+
+        <button class="btn btn-primary">Enviar</button>
+
+      </form>
+
+    </section>
+
+
+
+    <footer>
+
+      © <span id="ano"></span> — ME - Gestão na Prática
+
+    </footer>
+
+  </div>
+
+
+
+  <script>
+
+    document.getElementById("ano").textContent = new Date().getFullYear();
+
+  </script>
+
+
+
 </body>
+
 </html>
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
